---
(4.2.6p1-RC2) 2009/12/25 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1411] Fix status messages in refclock_oncore.c.
* [Bug 1416] MAXDNAME undefined on Solaris 2.6.
* [Bug 1419] ntpdate, ntpdc, sntp, ntpd ignore configure --bindir.
* [Bug 1424] Fix check for rtattr (rtnetlink.h).
* [Bug 1425] unpeer by association ID sets up for duplicate free().
* [Bug 1426] scripts/VersionName needs . on the search path.
* [Bug 1427] quote missing in ./build - shows up on NetBSD.
* [Bug 1428] Use AC_HEADER_RESOLV to fix breaks from resolv.h
* [Bug 1429] ntpd -4 option does not reliably force IPv4 resolution.
* [Bug 1431] System headers must come before ntp headers in ntp_intres.c .
* [Bug 1434] HP-UX 11 ip_mreq undeclared, _HPUX_SOURCE helps some.
* [Bug 1435] sntp: Test for -lresolv using the same tests as in ntp.

---
(4.2.6p1-RC1) 2009/12/20 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1409] Put refclock_neoclock4x.c under the NTP COPYRIGHT notice.
  This should allow debian and other distros to add this refclock driver
  in further distro releases.
  Detect R2 hardware releases.
* [Bug 1412] m4/os_cflags.m4 caches results that depend on $CC.
* [Bug 1413] test OpenSSL headers regarding -Wno-strict-prototypes.
* [Bug 1414] Enable "make distcheck" success with BSD make.
* [Bug 1415] Fix Mac OS X link problem.
* [Bug 1418] building ntpd/ntpdc/ntpq statically with ssl fails.
* Build infrastructure updates to enable beta releases of ntp-stable.

---
(4.2.6) 2009/12/09 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.4p8) - [Sec 1331] DoS with mode 7 packets - CVE-2009-3563.
* [Bug 508] Fixed leap second handling for Windows.
(4.2.5p250-RC) 2009/11/30 Released by Harlan Stenn <stenn@ntp.org>
* sntp documentation updates.
* [Bug 761] internal resolver does not seem to honor -4/-6 qualifiers
* [Bug 1386] Deferred DNS doesn't work on NetBSD
* [Bug 1391] avoid invoking autogen twice for .c and .h files.
* [Bug 1397] shmget() refclock_shm failing because of file mode.