@@ -74,9 +74,6 @@ B_S_DIST=		\
 	ntp_keyword.h 	\
 	ntpd-opts.c 	\
 	ntpd-opts.h 	\
-	ntpd.1 		\
-	ntpd-opts.texi 	\
-	ntpd-opts.menu	\
 	$(NULL)
 
 BUILT_SOURCES=		\
@@ -87,7 +84,7 @@ BUILT_SOURCES=		\
 	$(B_S_DIST)	\
 	$(NULL)
 
-man_MANS=	ntpd.1
+man_MANS=	$(srcdir)/ntpd.1
 
 # ntpdsim.1 is a remnant along with all the ntpdsim-opts.* files, the
 # simulator currently uses ntpd-opts.[ch].  This also means there is no
@@ -119,9 +116,14 @@ ETAGS_ARGS = Makefile.am
 ###							Y2Kfixes
 check_PROGRAMS = @MAKE_CHECK_Y2K@
 EXTRA_PROGRAMS = check_y2k ntpdsim keyword-gen
-run_ag=		cd $(srcdir) &&					\
-		env PATH="$(abs_builddir):$(PATH)"		\
+noinst_DATA =	$(srcdir)/ntpd-opts.texi $(srcdir)/ntpd-opts.menu
+run_ag=		cd $(srcdir) &&	env PATH="$(abs_builddir):$(PATH)"	\
 		autogen -L ../include --writable
+run_ro=		( { test -w $(srcdir) && exit 0 ;} || { touch ro_srcdir	\
+		&& chmod u+w $(top_srcdir) $(srcdir) ;} ) &&
+if_ro_src=	{ test ! -f ro_srcdir && exit 0 ;} ||
+post_run_ro=	$(if_ro_src) { rm ro_srcdir && chmod u-w $(srcdir)	\
+		$(top_srcdir) ;}
 std_def_list=	$(top_srcdir)/include/autogen-version.def 	\
 		$(top_srcdir)/include/copyright.def 		\
 		$(top_srcdir)/include/version.def
@@ -229,11 +231,15 @@ $(srcdir)/ntpd-opts.c: $(srcdir)/ntpd-opts.def $(srcdir)/ntpdbase-opts.def $(std
 	$(run_ag) ntpd-opts.def
 
 $(srcdir)/ntpd.1: $(srcdir)/ntpd-opts.def $(srcdir)/ntpdbase-opts.def $(std_def_list)
-	$(run_ag) -Tagman1.tpl -bntpd ntpd-opts.def
+	$(run_ro) $(run_ag) -Tagman1.tpl -bntpd ntpd-opts.def
+	$(post_run_ro)
 
-$(srcdir)/ntpd-opts.texi $(srcdir)/ntpd-opts.menu: $(srcdir)/ntpd-opts.def $(srcdir)/ntpdbase-opts.def $(std_def_list)
-	$(MAKE) ntpd	# aginfo.tpl runs the binary to extract --help usage text
-	$(run_ag) -Taginfo.tpl -DLEVEL=section ntpd-opts.def
+$(srcdir)/ntpd-opts.menu: $(srcdir)/ntpd-opts.texi
+	@: do-nothing action to avoid default SCCS get, .menu built with .texi
+	
+$(srcdir)/ntpd-opts.texi: $(srcdir)/ntpd-opts.def $(srcdir)/ntpdbase-opts.def $(std_def_list)
+	$(run_ro) $(run_ag) -Taginfo.tpl -DLEVEL=section ntpd-opts.def
+	$(post_run_ro)
 
 $(PROGRAMS): $(LDADD)
 
