@@ -9,7 +9,7 @@ endif
 
 EXTRA_PROGRAMS=	ntpdc-layout
 EXTRA_DATA=	check-layout
-BUILT_SOURCES=	@MAKE_CHECK_LAYOUT@
+BUILT_SOURCES=	@MAKE_CHECK_LAYOUT@ ntpdc-opts.c ntpdc-opts.h
 AM_CPPFLAGS= -I$(top_srcdir)/include -I$(top_srcdir)/lib/isc/include \
 	-I$(top_srcdir)/lib/isc/nothreads/include \
 	-I$(top_srcdir)/lib/isc/unix/include $(LIBOPTS_CFLAGS)
@@ -24,12 +24,15 @@ noinst_HEADERS=	ntpdc.h
 ETAGS_ARGS= 	Makefile.am
 EXTRA_DIST=	nl_in.c nl.pl layout.std	\
 		ntpdc-opts.def ntpdc.1 ntpdc-opts.texi ntpdc-opts.menu
-BUILT_SOURCES+=	ntpdc-opts.c ntpdc-opts.h ntpdc.1 ntpdc-opts.texi	\
-		ntpdc-opts.menu
-man_MANS=	ntpdc.1
-run_ag=		cd $(srcdir) &&					\
-		env PATH="$(abs_builddir):$(PATH)"		\
+man_MANS=	$(srcdir)/ntpdc.1
+noinst_DATA=	$(srcdir)/ntpdc-opts.texi $(srcdir)/ntpdc-opts.menu
+run_ag=		cd $(srcdir) &&	env PATH="$(abs_builddir):$(PATH)"	\
 		autogen -L ../include --writable
+run_ro=		( { test -w $(srcdir) && exit 0 ;} || { touch ro_srcdir	\
+		&& chmod u+w $(top_srcdir) $(srcdir) ;} ) &&
+if_ro_src=	{ test ! -f ro_srcdir && exit 0 ;} ||
+post_run_ro=	$(if_ro_src) { rm ro_srcdir && chmod u-w $(srcdir)	\
+		$(top_srcdir) ;}
 std_def_list=	$(top_srcdir)/include/debug-opt.def		\
 		$(top_srcdir)/include/autogen-version.def 	\
 		$(top_srcdir)/include/copyright.def 		\
@@ -43,11 +46,15 @@ $(srcdir)/ntpdc-opts.c: $(srcdir)/ntpdc-opts.def $(std_def_list)
 	$(run_ag) ntpdc-opts.def
 
 $(srcdir)/ntpdc.1: $(srcdir)/ntpdc-opts.def $(std_def_list)
-	$(run_ag) -Tagman1.tpl -bntpdc ntpdc-opts.def
+	$(run_ro) $(run_ag) -Tagman1.tpl -bntpdc ntpdc-opts.def
+	$(post_run_ro)
 
-$(srcdir)/ntpdc-opts.texi $(srcdir)/ntpdc-opts.menu: $(srcdir)/ntpdc-opts.def $(std_def_list)
-	$(MAKE) ntpdc	# aginfo.tpl runs the binary to extract --help usage text
-	$(run_ag) -Taginfo.tpl -DLEVEL=section ntpdc-opts.def
+$(srcdir)/ntpdc-opts.menu: $(srcdir)/ntpdc-opts.texi
+	@: do-nothing action to avoid default SCCS get, .menu built with .texi
+	
+$(srcdir)/ntpdc-opts.texi: $(srcdir)/ntpdc-opts.def $(std_def_list)
+	$(run_ro) $(run_ag) -Taginfo.tpl -DLEVEL=section ntpdc-opts.def
+	$(post_run_ro)
 
 ntpdc_SOURCES = ntpdc.c ntpdc_ops.c ntpdc-opts.c ntpdc-opts.h
 
