@@ -16,18 +16,21 @@ ntpq_LDADD=	version.o @EDITLINE_LIBS@ $(LIBOPTS_LDADD) \
 		../libntp/libntp.a @LCRYPTO@
 noinst_HEADERS=	ntpq.h
 noinst_LIBRARIES=	libntpq.a
-# HMS: I don't think we need libntpq_a_LIBADD...
-#libntpq_a_LIBADD=	version.o @EDITLINE_LIBS@ $(LIBOPTS_LDADD) ../libntp/libntp.a
 libntpq_a_CFLAGS=	-DNO_MAIN_ALLOWED -DBUILD_AS_LIB
 CLEANFILES=
 DISTCLEANFILES=	.version version.c
 ETAGS_ARGS=	Makefile.am
 EXTRA_DIST=	ntpq-opts.def ntpq.1 ntpq-opts.texi ntpq-opts.menu
-BUILT_SOURCES=	ntpq-opts.c ntpq-opts.h ntpq.1 ntpq-opts.texi ntpq-opts.menu
-man_MANS=	ntpq.1
-run_ag=		cd $(srcdir) &&					\
-		env PATH="$(abs_builddir):$(PATH)"		\
+BUILT_SOURCES=	ntpq-opts.c ntpq-opts.h
+man_MANS=	$(srcdir)/ntpq.1
+noinst_DATA=	$(srcdir)/ntpq-opts.texi $(srcdir)/ntpq-opts.menu
+run_ag=		cd $(srcdir) &&	env PATH="$(abs_builddir):$(PATH)"	\
 		autogen -L ../include --writable
+run_ro=		( { test -w $(srcdir) && exit 0 ;} || { touch ro_srcdir	\
+		&& chmod u+w $(top_srcdir) $(srcdir) ;} ) &&
+if_ro_src=	{ test ! -f ro_srcdir && exit 0 ;} ||
+post_run_ro=	$(if_ro_src) { rm ro_srcdir && chmod u-w $(srcdir)	\
+		$(top_srcdir) ;}
 std_def_list=	$(top_srcdir)/include/debug-opt.def		\
 		$(top_srcdir)/include/autogen-version.def 	\
 		$(top_srcdir)/include/copyright.def 		\
@@ -44,11 +47,15 @@ $(srcdir)/ntpq-opts.c: $(srcdir)/ntpq-opts.def $(std_def_list)
 	$(run_ag) ntpq-opts.def
 
 $(srcdir)/ntpq.1: $(srcdir)/ntpq-opts.def $(std_def_list)
-	$(run_ag) -Tagman1.tpl -bntpq ntpq-opts.def
+	$(run_ro) $(run_ag) -Tagman1.tpl -bntpq ntpq-opts.def
+	$(post_run_ro)
 
-$(srcdir)/ntpq-opts.texi $(srcdir)/ntpq-opts.menu: $(srcdir)/ntpq-opts.def $(std_def_list)
-	$(MAKE) ntpq	# aginfo.tpl runs the binary to extract --help usage text
-	$(run_ag) -Taginfo.tpl -DLEVEL=section ntpq-opts.def
+$(srcdir)/ntpq-opts.menu: $(srcdir)/ntpq-opts.texi
+	@: do-nothing action to avoid default SCCS get, .menu built with .texi
+	
+$(srcdir)/ntpq-opts.texi: $(srcdir)/ntpq-opts.def $(std_def_list)
+	$(run_ro) $(run_ag) -Taginfo.tpl -DLEVEL=section ntpq-opts.def
+	$(post_run_ro)
 
 $(PROGRAMS): $(LDADD)
 
